@@ -1,23 +1,21 @@
 import com.example.Cat;
 import com.example.Feline;
 import org.junit.Test;
-import java.util.Arrays;
 import java.util.List;
-
+import static org.junit.Assert.assertEquals;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
-public class GetFoodCat {
+public class GetFoodCatTest {
 
     Feline feline = mock(Feline.class);
     Cat cat = new Cat(feline);
 
     @Test
     public void testGetFoodReturnsMeat() throws Exception {
-        List<String> expectedFood = Arrays.asList("Мясо");
-        when(mockFeline.eatMeat()).thenReturn(expectedFood);
-
+        List<String> expectedFood = List.of("Мясо");
+        when(feline.eatMeat()).thenReturn(expectedFood);
         List<String> actualFood = cat.getFood();
         assertEquals(expectedFood, actualFood);
     }
-
 }
